ganti new release

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
             <div class="about__container container grid">
                 <img src="img/about.jpg" alt="" class="about__img">
                 <div class="about__data">
-                    <p class="about__description">my full name is Praysingzky Richardo Rivo Pelu, born in Bitung, June 30, 2001, and domiciled in the city of Bitung, North Sulawesi, Indonesia I started to know music at the age of 9 when I was in elementary school and I continued to
-                        study music until now and began to focus on a career in the music world I first entered the music and audio industry in 2019, by learning the arrangement at first using DAW FL studio 12, since then I am very interested in the world
-                        of music production and focus on that midwife until now I have released more than 3 original songs, 5 remixed songs, 2 commercial jingles, and served more than 10 clients since 2020, and I will continue to learn to improve my quality
-                        and quantity as a music producer.</p>
+                    <p class="about__description">my full name is Praysingzky Richardo Rivo Pelu, born in Bitung, June 30, 2001, and domiciled in the city of Bitung, North Sulawesi, Indonesia<br /> I started to know music at the age of 9 when I was in elementary school and I continued
+                        to study music until now and began to focus on a career in the music world<br /> I first entered the music and audio industry in 2019, by learning the arrangement at first using DAW FL studio 12, since then I am very interested
+                        in the world of music production and focus on that midwife until now<br />I have released more than 3 original songs, 5 remixed songs, 2 commercial jingles, and served more than 10 clients since 2020, and I will continue to learn
+                        to improve my quality and quantity as a music producer.</p>
                     <div class="about__info">
                         <div>
                             <span class="about__info-title">2+</span>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <!-- cv downloadddddddddddddddddddddddddd -->
-                    <div class="about__buttons">
+                    <div class="about__buttons" style="display: none;">
                         <a href="#" class="button button--flex">
                         Download CV<i class="uil uil-import button__icon"></i>
                         </a>
@@ -712,12 +712,12 @@
                 <div class="swiper-wrapper">
 
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/port/Untitled-1-01.jpg" alt="" class="portfolio__img">
+                        <img src="img/new song/dark.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Olivia Castriota - Never Lie About You (remix)</h3>
-                            <p class="portfolio__description">Song for skio music remix contest</p>
-                            <a href="https://soundcloud.com/rivo-pelu-294029103/olivia-castriota-never-lie-about-you-skiomusic-remix-contest" target="blank" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Rivo Pelu - Dark</h3>
+                            <p class="portfolio__description">Original Song</p>
+                            <a href="https://open.spotify.com/track/4t3vyIsIfso2hDGTEI5Ifk?si=a9309aaa59af4ed0" target="blank" class="button button--flex button--small portfolio__button">
                                 Play
                                 <i class="uil uil-play button__icon"></i>
                             </a>
@@ -727,12 +727,12 @@
                     </div>
                     <!--==================== PORTFOLIO 2====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/port/Untitled-1-02.jpg" alt="" class="portfolio__img">
+                        <img src="img/new song/sebatas.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Julia Alfrida-Girls,girls,girls (remix)</h3>
-                            <p class="portfolio__description">Song for skio music remix contest</p>
-                            <a href="https://soundcloud.com/rivo-pelu-294029103/julia-alfrida-girls-girls-girls-skiomusic-remix-contes" target="blank" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Rivo Pelu - Sebatas Teman</h3>
+                            <p class="portfolio__description">Original Song
+                                <a href="https://open.spotify.com/track/1z7MovEU0vJ8Mgrdt4Jy1n?si=a94d56e2f70244df" target="blank" class="button button--flex button--small portfolio__button">
                                 Play
                                 <i class="uil uil-play button__icon"></i>
                             </a>
@@ -740,12 +740,12 @@
                     </div>
                     <!--==================== PORTFOLIO 3====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/port/Untitled-1-03.jpg" alt="" class="portfolio__img">
+                        <img src="img/new song/igo.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Jahm-the one (remix)</h3>
-                            <p class="portfolio__description">Song for skio Music remix contest</p>
-                            <a href="https://soundcloud.com/rivo-pelu-294029103/the-one-jham-skiomusic-remix-contes" target="blank" class="button button--flex button--small portfolio__button">
+                            <h3 class="portfolio__title">Dhiego Kailas</h3>
+                            <p class="portfolio__description">Song for client</p>
+                            <a href="https://open.spotify.com/track/2RSjil64qklUxZEyCekYO2?si=e69bd6c5f2144466" target="blank" class="button button--flex button--small portfolio__button">
                                 Play
                                 <i class="uil uil-play button__icon"></i>
                             </a>
@@ -799,7 +799,7 @@
                         <a class="contact-click" href="#"></a>
                         <div>
                             <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">Rivopelu@yahoo.com</span>
+                            <span class="contact__subtitle">Contact@rivopelu.my.id</span>
                         </div>
                         </a>
                     </div>
@@ -882,7 +882,7 @@
 
                 </div>
             </div>
-            <p class="footer__copy">&#169; RivoPelu</p>
+            <p class="footer__copy">&#169; 2021 RivoPelu</p>
         </div>
 
     </footer>
