--- a/index.html
+++ b/index.html
@@ -779,6 +779,35 @@
             <h2 class="section__title">Contact Me</h2>
             <span class="section__subtitle">Get in toutch</span>
 
+            <!-- active loading -->
+            <div class="services__modal loading">
+                <div class="">
+                    <div class="container__loading">
+                        <div class="ring"></div>
+                        <div class="ring"></div>
+                        <div class="ring"></div>
+                        <p>Loading...</p>
+                    </div>
+
+                    </ul>
+                </div>
+            </div>
+            <!-- active kirim -->
+            <div class="services__modal kirim">
+                <div class="services__modal-content" style="text-align: center;">
+                    <h4 class="services__modal-title">thank you </h4>
+                    <i style="font-size: 5rem;" class="uil uil-check-circle services__modal-icon"></i>
+                    <i class="uil uil-times services__modal-close kirim__close "></i>
+
+                    <ul class="services__modal-services grid">
+                        <li class="services__modal-service">
+
+                            <p>Your message has been sent and will be given feedback via email by the admin</p>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
             <div class="contact__container container grid">
                 <div>
                     <!-- contact phone -->
@@ -813,36 +842,40 @@
                                 <span class="contact__subtitle">Bitung, Nort Sulawesi, Indonesia</span>
                             </div>
                         </a>
+
                     </div>
                 </div>
 
-                <form action="" class="contact__form grid">
+                <form action="" class="contact__form grid" name="Form-Contact-Rivo-Web">
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input type="text" class="contact__input" name="name">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <input type="email" class="contact__input" name="email">
                         </div>
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Subject</label>
-                        <input type="text" class="contact__input">
+                        <input type="text" class="contact__input" name="subject">
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <textarea name="pesan" id="" cols="0" rows="7" class="contact__input"></textarea>
                     </div>
 
                     <div>
-                        <a href="#" class="button button--flex">
+                        <button style="cursor: pointer;" type="submit" href="#" class="button button--flex submit">
                             Send Message
                             <i class="uil uil-message button__icon"></i>
-                        </a>
+                        </button>
                     </div>
                 </form>
+
+
+            </div>
             </div>
 
         </section>
