--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <link rel="shortcut icon" href="img/lofo.png" type="image/x-icon">
 
     <title>Rivo Pelu</title>
+
+
+    <!-- gooogleeeeeeee analiticcc -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213739512-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-213739512-1');
+    </script>
 </head>
 
 <body>
