--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="img/lofo.png" type="image/x-icon">
-
+    <!-- metatagggggg -->
+    <meta name="description" content="pop music producer Indonesia">
+    <meta name="keyword" content="rivo pelu, rivo, pelu, bitung, sulawesi utara, manado, musisi sulut, musik producer, pop musik, pop musik producer, producer bitung, musik bitung, kota bitung, kota manado, artis manado, profil rivo pelu, web rivo pelu, musisi bitung, recording bitung, kota bitung, bitung city, RivoPelu, rivo music">
+    <meta name="outhor" content="rivo pelu">
+    <!-- titleeee -->
     <title>Rivo Pelu</title>
 
 
