--- a/index.html
+++ b/index.html
@@ -665,12 +665,13 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Rivo Pelu - DARK (Instrumental)</h3>
                             <p class="portfolio__description">Original song Rivo Pelu special Helloween</p>
-                            <a href="https://lynk.id/darkrivopelu" target="blank" class="button button--flex button--small portfolio__button">
-                                Play
+                            <a href="halaman2/dark.html" class="button button--flex button--small portfolio__button">
+                                Info
                                 <i class="uil uil-play button__icon"></i>
                             </a>
                         </div>
                     </div>
+
                     <!--==================== PORTFOLIO 5====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/port/Untitled-1-06.jpg" alt="" class="portfolio__img">
@@ -681,6 +682,19 @@
                             <a href="https://open.spotify.com/track/2RSjil64qklUxZEyCekYO2?si=e69bd6c5f2144466&nd=1" target="blank" class="button button--flex button--small portfolio__button">
                                 Play
                                 <i class="uil uil-play button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--==================== PORTFOLIO 6====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/port/21chrismas-01.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Rivo Pelu & Shyntia Matindas <br>21 Christmas</h3>
+                            <p class="portfolio__description">Mini EP for Christmas day </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Info
+                                <i class="uil uil-document-info button__icon"></i>
                             </a>
                         </div>
                     </div>
@@ -729,16 +743,28 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
-
+                    <!-- release 1 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/new song/dark.jpg" alt="" class="portfolio__img">
+                        <img src="img/new song/21.jpg" alt="rivopelu natal, 21 chrismas" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Rivo Pelu & Shyntia Matindas <br>21 Christmas</h3>
+                            <p class="portfolio__description">Mini EP for Christmas day </p>
+                            <a href="#" class="button button--flex button--small portfolio__button">
+                                Info
+                                <i class="uil uil-document-info button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/new song/dark.jpg" alt="rivo pelu dark" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Rivo Pelu - Dark</h3>
                             <p class="portfolio__description">Original Song</p>
-                            <a href="https://open.spotify.com/track/4t3vyIsIfso2hDGTEI5Ifk?si=a9309aaa59af4ed0" target="blank" class="button button--flex button--small portfolio__button">
-                                Play
-                                <i class="uil uil-play button__icon"></i>
+                            <a href="halaman2/dark.html" class="button button--flex button--small portfolio__button">
+                                info
+                                <i class="uil uil-document-info button__icon"></i>
                             </a>
                         </div>
 
@@ -746,7 +772,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/new song/sebatas.jpg" alt="" class="portfolio__img">
+                        <img src="img/new song/sebatas.jpg" alt="rivopelu sebatas teman" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Rivo Pelu - Sebatas Teman</h3>
@@ -757,19 +783,7 @@
                             </a>
                         </div>
                     </div>
-                    <!--==================== PORTFOLIO 3====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="img/new song/igo.jpg" alt="" class="portfolio__img">
 
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">Dhiego Kailas</h3>
-                            <p class="portfolio__description">Song for client</p>
-                            <a href="https://open.spotify.com/track/2RSjil64qklUxZEyCekYO2?si=e69bd6c5f2144466" target="blank" class="button button--flex button--small portfolio__button">
-                                Play
-                                <i class="uil uil-play button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
 
 
 
