--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Rivo Pelu & Shyntia Matindas <br>21 Christmas</h3>
                             <p class="portfolio__description">Mini EP for Christmas day </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <a href="halaman2/21.html" class="button button--flex button--small portfolio__button">
                                 Info
                                 <i class="uil uil-document-info button__icon"></i>
                             </a>
@@ -750,7 +750,7 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Rivo Pelu & Shyntia Matindas <br>21 Christmas</h3>
                             <p class="portfolio__description">Mini EP for Christmas day </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <a href="halaman2/21.html" class="button button--flex button--small portfolio__button">
                                 Info
                                 <i class="uil uil-document-info button__icon"></i>
                             </a>
