--- a/halaman2/21.html
+++ b/halaman2/21.html
@@ -37,7 +37,7 @@
     <header class="header" id="header">
         <nav class="nav container nav__container">
             <div class="logo-navbar">
-                <a href="../index.html" class="nav__logo"><img class="gambar-logo" src="img/lofo.png" alt=""><span> RIVO PELU </span></a>
+                <a href="../index.html" class="nav__logo"><img class="gambar-logo" src="../img/lofo.png" alt=""><span> RIVO PELU </span></a>
             </div>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
@@ -113,7 +113,7 @@
                 <h2 class="section__title">stream on digital platforms</h2>
                 <ul class="stream__list">
                     <li>
-                        <a href="#"><i class="fab fa-spotify"></i><span class="text__list">spotify</span></a>
+                        <a href="https://open.spotify.com/album/4ydMBhBmdTzWhkvU33xPIj?si=6b1d060a8fcb49d4" target="blank"><i class="fab fa-spotify"></i><span class="text__list">spotify</span></a>
                     </li>
                     <li>
                         <a href="#"><i class="fab fa-deezer"></i><span class="text__list">Deezer</span></a>
@@ -121,18 +121,191 @@
                 </ul>
                 <ul class="stream__list">
                     <li>
-                        <a href="#"><i class="fab fa-youtube"></i><span class="text__list">Youtube</span></a>
+                        <a href="https://www.youtube.com/watch?v=bJC-eiB205Y&list=PLDzvdE4W65BhFV6VKcko8jgUHqFo7NnG4" target="blank"><i class="fab fa-youtube"></i><span class="text__list">Youtube</span></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-play"></i><span class="text__list">YMusic</span></a>
+                        <a href="https://www.youtube.com/watch?v=ZcQZr-iNHc8&list=OLAK5uy_lOevhF8Eoxz2RlH-dQZRNmwsYU7dR538A" target="blank"><i class="fas fa-play"></i><span class="text__list">YMusic</span></a>
                     </li>
                 </ul>
             </div>
+            <!--==================== QUALIFICATION ====================-->
+            <section class="qualification section">
+                <h2 class="section__title">lyrics</h2>
+
+                <div class="qualification__container container">
+                    <div class="qualification__tabs" style="text-align: center;">
+                        <div class="qualification__button button--flex qualification__active" data-target='#education'>
+                            Damai <br> Natal
+                        </div>
+                        <div class="qualification__button button--flex qualification__active" data-target='#work'>
+                            Sukacita Hari <br> Bahagia
+                        </div>
+                    </div>
+
+                    <div class="qualification__sections">
+                        <!--==================== QUALIFICATION content 1 ====================-->
+                        <div class="qualification__content qualification__active" data-content id="education">
+                            <!--==================== QUALIFICATION  1 ====================-->
+                            <div class="qualification__data">
+                                <div>
+                                    <span class="lirik__ket">V1 :</span>
+                                    <h5 class="lirik__bait">
+                                        Suara lonceng tlah terdengar <br> Bintang terlihat terang menderang <br> Nyanyian sukacita berkumdang <br> Semua terlihat begitu senang <br>
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        Merayakan kelahiran sang mesias <br> Yang lahir membawa damai di dunia <br> Iyalah Yesus kristus sang penebus <br> Seluruh Dosa umat Manusia <br>
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">prechorus :</span>
+                                    <h5 class="lirik__bait">
+                                        Semua umatnyapun bersukacita <br> Mendengar kabar yang sangat bahagia <br> Yang kan lahir di dunia <br> Sang juru slamat umat manusia <br>
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">Chorus :</span>
+                                    <h5 class="lirik__bait">
+                                        Damai natal <br> Yang di nanti pun telah tiba <br> Damai natal <br> Kini hadir membawa sukacita <br>
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        Damai natal <br> Datang membawa terang di dunia <br> Damai natal <br> Jangan lenyap tanpa kisah indah <br>
+
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">V2 :</span>
+                                    <h5 class="lirik__bait">
+
+                                        Cahaya liin natal menerangi <br> Ribuan bintang pun mengelilingi <br> Di malam natal yang dami ini <br> Tla lahir sukacita yang abadi <br>
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">prechorus 2 :</span>
+                                    <h5 class="lirik__bait">
+                                        Tlah terdengar kabar dari malaikat <br> Bahwa yesus tla lahir membawa berkat <br> Yang kan menebus dosa sluruh umatnya <br> dan membawa damai untuk slamanya <br>
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        <br> Back To Chorus <br> <br> Damai natal kini hadir 4x <br><br> Back To Chorus
+
+                                    </h5>
+                                </div>
+
+                            </div>
+
+
+
+                        </div>
+                        <!--==================== QUALIFICATION content 2 ====================-->
+                        <div class="qualification__content" data-content id="work">
+                            <!--==================== QUALIFICATION  1 ====================-->
+                            <div class="qualification__data">
+                                <div>
+                                    <span class="lirik__ket">V1 :</span>
+                                    <h5 class="lirik__bait">
+                                        Cahaya sinar bintang menerangi <br> Kilauan lampu hias berwarna warni <br> Terpancar indah di sepanjang jalan kini <br>
+
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        Lonceng natalpun tlah berdentang <br> Setahun lamanya yang di tunggu pun datang <br> Pohon-pohon natal yang terang menderang <br> Kembali hiasa malam natal yang panjang <br>
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">prechorus :</span>
+                                    <h5 class="lirik__bait">
+                                        Hari natal pun telah tiba <br> Hari yang penuh sukacita <br> Berkumpul merayakan hari bahagia <br> Bersama <br>
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">Chorus :</span>
+                                    <h5 class="lirik__bait">
+                                        Suara musik kini terdengar <br> Nyanyian natal pun berkumandang <br> Senyum bahagia kini terpancar <br> Dimalam natal yang penuh damai <br>
+
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        Semua gembira merayakannya <br> hari hatal yang tlah di tunggu lama <br> Sluruh dunia pun bersukacita <br> Menyambut hari yang penuh Bahagia <br>
+
+
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">V2 :</span>
+                                    <h5 class="lirik__bait">
+
+                                        Aroma kue coklat kini tla tercium <br> Keramaian dan sukacita membuat ku kagum <br> Mendengar lagu natal dalam sebuah album <br> Membuat diriku slalu tersenyum <br>
+
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+
+                                        Kenangan natal ini takan pernah hilang <br> semua di tahun ini takan pernah terulang <br> kisah indah yang kan slalu terbayang <br> kan slalu ku nantikan di masa mendatang <br>
+
+
+
+                                    </h5>
+                                    <br>
+                                    <span class="lirik__ket">prechorus 2 :</span>
+                                    <h5 class="lirik__bait">
+
+                                        Hari natal pun telah tiba <br> Hari yang penuh sukacita <br> Berkumpul merayakan hari bahagia <br> Bersama
+
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        <br> Back To Chorus <br>
+
+                                    </h5>
+
+                                    <br>
+                                    <span class="lirik__ket">Bridge :</span>
+                                    <h5 class="lirik__bait">
+                                        Damai natal yang kini hadir <br> Cerita indah yang kini tla terukir <br> Semua kisah ini pun tlah terlansir <br> Dalam setiap kata yang tlah mengalir <br>
+
+
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        Suara dentang lonceng yang menggemah <br> Disetiap malam natal membuat ceria <br> Akan damai Natal di sluruh dunia <br> Menyambut kehadiran sang Mesias <br>
+
+
+
+
+                                    </h5>
+                                    <h5 class="lirik__bait">
+                                        <br> Back To Chorus <br>
+
+                                    </h5>
+                                </div>
+                            </div>
+                            <!--==================== QUALIFICATION  2 ====================-->
+
+
+                        </div>
+
+
+
+                    </div>
+
+                </div>
+                </div>
+                </div>
+            </section>
             <div class="content__2">
+                <!-- sosmed 21-->
+
+                <div class="sosmed__halaman2">
+                    <p style="margin-bottom: 1rem;">Follow :</p>
+                    <div class="sosmed__halaman2-list">
+                        <a href="https://www.instagram.com/prishintya/" target="blank"> <i class="uil uil-instagram"> : Shitya Matindas</i></a>
+                    </div>
+                </div>
                 <h2 class="section__title">Song Background</h2>
                 <p>a song created to welcome Christmas, in this mini EP consists of two songs entitled Peace of Christmas and the joy of a happy day sung by Shintya Matindas & Rivo Pelu</p>
                 <br>
-                <p>Released on October 28, 2021</p>
+                <p>Released on Dec 05, 2021</p>
             </div>
         </section>
 
@@ -175,7 +348,7 @@
 
                 </div>
             </div>
-            <p class="footer__copy">&#169; 2021 RivoPelu</p>
+            <p class="footer__copy" style="margin-bottom: 1rem;">&#169; 2021 RivoPelu</p>
         </div>
 
     </footer>
